@@ -36,5 +36,6 @@ public class DataFileConstants {
   public static final String CODEC = "avro.codec";
   public static final String NULL_CODEC = "null";
   public static final String DEFLATE_CODEC = "deflate";
+  public static final String SNAPPY_CODEC = "snappy";
 
 }
